--- a/src/App.module.css
+++ b/src/App.module.css
@@ -41,6 +41,15 @@
   color: #888;
 }
 
-.h1{
-display: flex;
+
+.wrap {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.h1 {
+  margin: 0; 
+  text-align: center; 
 }
